k3s/applications/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: sabnzbd
  labels:
    app.kubernetes.io/name: sabnzbd
spec:
  type: ClusterIP
  selector:
    app: sabnzbd
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: metrics
      port: 9711
      targetPort: 9711
      protocol: TCP
    - name: gluetun-metrics
      port: 9586
      targetPort: 9586
      protocol: TCP
